<resources>
    <string name="app_name">ARK</string>
    <string name="background_icon">background-icon</string>
    <string name="splash_vector">splash_vector</string>
    <string name="app_logo">app_logo</string>
    <string name="get_started">Get Started</string>
    <string name="login_activity_bg_icon">login activity bg icon</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="google_login">google_login</string>
    <string name="github_login">github_login</string>
    <string name="google">Google</string>
    <string name="github">Github</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_lecture_notes_here">Search Lecture notes here</string>
    <string name="forum">Forum</string>
    <string name="forum_link">forum link</string>
    <string name="no_downloaded_content">No Downloaded Content</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="upload">Upload</string>
    <string name="add_file">Add File</string>
    <string name="complete_upload">Complete Upload</string>

</resources>